added responsiveness and a contact page

--- a/QUARK.html
+++ b/QUARK.html
@@ -6,19 +6,13 @@
     <title>Starfleet News</title>
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/media.css">
+    <link rel="stylesheet" href="CSS/scrollbar.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cantarell&family=Orbitron:wght@600&display=swap" rel="stylesheet">
+    <script src="SCRIPTS/quark.js" defer></script>
 </head>
 <body>
-    <header>
-        <logo>
-            <span>Starfleet</span> News
-        </logo>
-        <nav>
-            <a href="" alt="" id="red">Home</a>
-            <a href="" alt="" id="blue">News</a>
-            <a href="" alt="" id="yellow">About Us</a>
-            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\contact.html" alt="" id="green">Become a Reporter</a>
-        </nav>
-    </header>
+    <div class="centralize"><iframe width="1000" height="600" aria-controls="false" src="https://www.youtube.com/embed/1WaGpjWXZhc?&amp;autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
 </body>
+
+
