--- a/article-1.html
+++ b/article-1.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/media.css">
     <link rel="stylesheet" href="CSS/scrollbar.css">
+    <link rel="stylesheet" href="CSS/main2.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cantarell&family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <script src="SCRIPTS/quark.js" defer></script>
+    <script src="SCRIPTS/main.js" defer></script>
 </head>
 <body>
     <header>
@@ -20,7 +22,7 @@
             <a href="C:/Users/Acer/vscode/WebDev/starfleetNews/index.html" alt="" id="red">Home</a>
             <a href="C:/Users/Acer/vscode/WebDev/starfleetNews/index.html" alt="" id="blue">News</a>
             <a href="" alt="" id="yellow">About Us</a>
-            <a href="" alt="" id="green">Become a Reporter</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\contact.html" alt="" id="green">Become a Reporter</a>
         </nav>
     </header>
         <aside class="mb-1">
@@ -32,7 +34,7 @@
         </aside>
         <aside class="mt-1">
             Ad
-            <h2>Quark's bar</h2>
+            <h2 id="quark's">Quark's bar</h2>
             <img class="quark-img" src="IMAGES/StarTrek_DS9_QuarksBarVintageLogo-Womens_Relaxed_ScoopNeck_Tshirt_Mockup-RO_620x.jpg" alt="">
             <h2 class="quark">Go have your holosuite dream, or just relax at the amazing bar at Quark's</h2>
             <h2 class="quark">Join Deep Space Nine Now!</h2>
@@ -74,7 +76,7 @@
             <div class="centralize">
                 <div class="ad">
                     Ad
-                    <h2>Quark's bar</h2>
+                    <h2 id="quark's2">Quark's bar</h2>
                     <div class="centralize">
                         <img class="quark-img" src="IMAGES/StarTrek_DS9_QuarksBarVintageLogo-Womens_Relaxed_ScoopNeck_Tshirt_Mockup-RO_620x.jpg" alt="">
                     </div>
