--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="" alt="" id="red">Home</a>
             <a href="" alt="" id="blue">News</a>
             <a href="" alt="" id="yellow">About Us</a>
-            <a href="" alt="" id="green">Become a Reporter</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\contact.html" alt="" id="green">Become a Reporter</a>
         </nav>
     </header>
     <main style="background-color: transparent;">
@@ -29,4 +29,5 @@
             <h2 style="border-bottom: 1px solid white; margin-bottom: 175px;"><a id="blue" href="C:/Users/Acer/vscode/WebDev/starfleetNews/article-1.html">Dominion massacre leaves 31 dead</a></h2>
         </figure>
     </main>
+    <P style="text-align: center;">made by <a href="https://github.com/Feguri/" style="text-decoration: underline;" target="_blank">F.S.C.d.P</a></P>
 </body>
