fixed article display bug

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <logo>
-            <span>Starfleet</span> News
+            <span id="starfleet">Starfleet</span> News
         </logo>
         <nav>
             <a href="" alt="" id="red">Home</a>
@@ -25,8 +25,11 @@
     <main style="background-color: transparent;">
         <h1><span>Featured Articles</span></h1>
         <figure class="centralize">
-            <img style="margin-left: 80px;" class="img-1" src="IMAGES/ds9-valiant33.jpg" alt="">
-            <h2 style="border-bottom: 1px solid white; margin-bottom: 175px;"><a id="blue" href="C:/Users/Acer/vscode/WebDev/starfleetNews/article-1.html">Dominion massacre leaves 31 dead</a></h2>
+            <div style="display: flex;">
+                <img style="margin-left: 80px;" class="img-1" src="IMAGES/ds9-valiant33.jpg" alt="">
+                <h2 style="border-bottom: 1px solid white; margin-bottom: 175px; margin-left: 10px;"><a id="blue" href="C:/Users/Acer/vscode/WebDev/starfleetNews/article-1.html">Dominion massacre leaves 31 dead</a></h2>
+            </div>
+            
         </figure>
     </main>
     <P style="text-align: center;">made by <a href="https://github.com/Feguri/" style="text-decoration: underline;" target="_blank">F.S.C.d.P</a></P>
