--- a/article-1.html
+++ b/article-1.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <logo>
-            <span>Starfleet</span> News
+            <span id="starfleet">Starfleet</span> News
         </logo>
         <nav>
             <a href="C:/Users/Acer/vscode/WebDev/starfleetNews/index.html" alt="" id="red">Home</a>
