--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="CSS/media2.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cantarell&family=Orbitron:wght@600&display=swap" rel="stylesheet">
+    <script src="SCRIPTS/main.js" defer></script>
+    <link rel="stylesheet" href="CSS/main2.css">
 </head>
 <body>
     <header>
@@ -26,7 +28,7 @@
         <h1><span>Featured Articles</span></h1>
         <figure class="centralize">
             <div style="display: flex;">
-                <img style="margin-left: 80px;" class="img-1" src="IMAGES/ds9-valiant33.jpg" alt="">
+                <img style="margin-left: 80px;" class="img-1 pointer" id="article1" src="IMAGES/ds9-valiant33.jpg" alt="">
                 <h2 style="border-bottom: 1px solid white; margin-bottom: 175px; margin-left: 10px;"><a id="blue" href="C:/Users/Acer/vscode/WebDev/starfleetNews/article-1.html">Dominion massacre leaves 31 dead</a></h2>
             </div>
             
