--- a/about-us.html
+++ b/about-us.html
@@ -6,19 +6,26 @@
     <title>Starfleet News</title>
     <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="CSS/media.css">
+    <link rel="stylesheet" href="CSS/media2.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cantarell&family=Orbitron:wght@600&display=swap" rel="stylesheet">
+    <script src="SCRIPTS/main.js" defer></script>
+    <link rel="stylesheet" href="CSS/main2.css">
 </head>
 <body>
     <header>
         <logo>
-            <span>Starfleet</span> News
+            <span  id="starfleet" class="pointer">Starfleet</span> News
         </logo>
         <nav>
-            <a href="" alt="" id="red">Home</a>
-            <a href="" alt="" id="blue">News</a>
-            <a href="" alt="" id="yellow">About Us</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\index.html" alt="" id="red">Home</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\index.html" alt="" id="blue">News</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\about-us.html" alt="" id="yellow">About Us</a>
             <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\contact.html" alt="" id="green">Become a Reporter</a>
         </nav>
     </header>
+    <main>
+        <h1>!!Disclaimer!!</h1>
+        <h2>This website is fan-made. I make no profit from it. Please don't sue me ❤️</h2>
+    </main>
 </body>
