--- a/article-1.html
+++ b/article-1.html
@@ -16,12 +16,12 @@
 <body>
     <header>
         <logo>
-            <span id="starfleet">Starfleet</span> News
+            <span id="starfleet" class="pointer">Starfleet</span> News
         </logo>
         <nav>
-            <a href="C:/Users/Acer/vscode/WebDev/starfleetNews/index.html" alt="" id="red">Home</a>
-            <a href="C:/Users/Acer/vscode/WebDev/starfleetNews/index.html" alt="" id="blue">News</a>
-            <a href="" alt="" id="yellow">About Us</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\index.html" alt="" id="red">Home</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\index.html" alt="" id="blue">News</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\about-us.html" alt="" id="yellow">About Us</a>
             <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\contact.html" alt="" id="green">Become a Reporter</a>
         </nav>
     </header>
@@ -66,7 +66,7 @@
             </p>
             <p>
                 After spending a few days with the crew it became increasingly apparent that their captain was
-                 manipulative and dictatorial. No crewmember was allowed to remember home, or even speak of it
+                 manipulative and irrational. No crewmember was allowed to remember home, or even speak of it
                   for that matter. Their intrapersonal relationships were limited only to the dominion war and
                    a blind devotion to Starfleet and honor. The captain’s manipulation was so effective that my
                     Ferenghi friend, Nog, was lured to accept a chief engineering role that was key to the
@@ -94,7 +94,7 @@
                   starship. That meant immediate death, of course.Valiant was no match to the dominion ship. 
                   But the red squad believed they could do it, and that’s all that mattered. After the mission 
                   failed horribly, I was able to escape with Nog and a Red Squad crewmember, who was still 
-                  delusionally devoted to their honor...
+                  delusionally devoted to their leader...
             </p>
             <div class="centralize">
                 <div class="author">
