--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
     <header>
         <logo>
-            <span id="starfleet">Starfleet</span> News
+            <span id="starfleet" class="pointer">Starfleet</span> News
         </logo>
         <nav>
-            <a href="" alt="" id="red">Home</a>
-            <a href="" alt="" id="blue">News</a>
-            <a href="" alt="" id="yellow">About Us</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\index.html" alt="" id="red">Home</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\index.html" alt="" id="blue">News</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\about-us.html" alt="" id="yellow">About Us</a>
             <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\contact.html" alt="" id="green">Become a Reporter</a>
         </nav>
     </header>
