--- a/contact.html
+++ b/contact.html
@@ -11,16 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cantarell&family=Orbitron:wght@600&display=swap" rel="stylesheet">
     <script src="SCRIPTS/helpers.js" defer></script>
+    <script src="SCRIPTS/main.js" defer></script>
 </head>
 <body>
     <header>
         <logo>
-            <span>Starfleet</span> News
+            <span  id="starfleet"  class="pointer">Starfleet</span> News
         </logo>
         <nav>
-            <a href="C:/Users/Acer/vscode/WebDev/starfleetNews/index.html" alt="" id="red">Home</a>
-            <a href="C:/Users/Acer/vscode/WebDev/starfleetNews/index.html" alt="" id="blue">News</a>
-            <a href="" alt="" id="yellow">About Us</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\index.html" alt="" id="red">Home</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\index.html" alt="" id="blue">News</a>
+            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\about-us.html" alt="" id="yellow">About Us</a>
             <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\contact.html" alt="" id="green">Become a Reporter</a>
         </nav>
     </header>
