fixed layout bugs

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,10 @@
             <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\contact.html" alt="" id="green">Become a Reporter</a>
         </nav>
     </header>
-    <main class="main-bg">
+    <main>
+        <h1>Coming soon</h1>
+    </main>
+    <main class="main-bg" style="display: none;">
         <h1>Write an article to be Featured!</h1>
         <h2>Follow the instructions to send your Starfleet News Article.</h2>
         <form method="POST" class="contact-form">
