--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <span id="starfleet" class="pointer">Starfleet</span> News
         </logo>
         <nav>
-            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\index.html" alt="" id="red">Home</a>
-            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\index.html" alt="" id="blue">News</a>
-            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\about-us.html" alt="" id="yellow">About Us</a>
-            <a href="C:\Users\Acer\vscode\WebDev\starfleetNews\contact.html" alt="" id="green">Become a Reporter</a>
+            <a href="https://feguri.github.io/Starfleet-News/index" alt="" id="red">Home</a>
+            <a href="https://feguri.github.io/Starfleet-News/index" alt="" id="blue">News</a>
+            <a href="https://feguri.github.io/Starfleet-News/about-us" alt="" id="yellow">About Us</a>
+            <a href="https://feguri.github.io/Starfleet-News/contact" alt="" id="green">Become a Reporter</a>
         </nav>
     </header>
     <main style="background-color: transparent;">
