--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <span id="starfleet" class="pointer">Starfleet</span> News
         </logo>
         <nav>
-            <a href="https://feguri.github.io/Starfleet-News/index" alt="" id="red">Home</a>
-            <a href="https://feguri.github.io/Starfleet-News/index" alt="" id="blue">News</a>
-            <a href="https://feguri.github.io/Starfleet-News/about-us" alt="" id="yellow">About Us</a>
-            <a href="https://feguri.github.io/Starfleet-News/contact" alt="" id="green">Become a Reporter</a>
+            <a href="https://feguri.github.io/PROVISORY/index" alt="" id="red">Home</a>
+            <a href="https://feguri.github.io/PROVISORY/index" alt="" id="blue">News</a>
+            <a href="https://feguri.github.io/PROVISORY/about-us" alt="" id="yellow">About Us</a>
+            <a href="https://feguri.github.io/PROVISORY/contact" alt="" id="green">Become a Reporter</a>
         </nav>
     </header>
     <main style="background-color: transparent;">
@@ -29,11 +29,11 @@
         <div class="centralize" style="flex-direction: column; ">
             <div style="display: flex;">
                 <img style="margin-left: 80px;  margin-right: 0;" class="img-1 pointer" id="article1" src="IMAGES/ds9-valiant33.jpg" alt="">
-                <h2 style="border-bottom: 1px solid white; margin-bottom: 175px; margin-left: 10px;"><a id="blue" href="https://feguri.github.io/Starfleet-News/article-1">Dominion massacre leaves 31 dead</a></h2>
+                <h2 style="border-bottom: 1px solid white; margin-bottom: 175px; margin-left: 10px;"><a id="blue" href="https://feguri.github.io/PROVISORY/article-1">Dominion massacre leaves 31 dead</a></h2>
             </div>
             <div style="display: flex; margin-top: 40px">
                 <img src="IMAGES/STDS9.jpg" style="width:420px;height:241px; margin-left: 76.6px; margin-right: 0;"   class="img-1 pointer" id="article2" alt="">
-                <h2 style="border-bottom: 1px solid white; margin-bottom: 175px; margin-left: 10px;"><a id="blue" href="https://feguri.github.io/Starfleet-News/article-2">Dominion & cardassia invade ds9</a></h2>
+                <h2 style="border-bottom: 1px solid white; margin-bottom: 175px; margin-left: 10px;"><a id="blue" href="https://feguri.github.io/PROVISORY/article-2">Dominion & cardassia invade ds9</a></h2>
             </div>
             
         </div>
