--- a/about-us.html
+++ b/about-us.html
@@ -18,10 +18,10 @@
             <span  id="starfleet" class="pointer">Starfleet</span> News
         </logo>
         <nav>
-            <a href="https://feguri.github.io/Starfleet-News/index" alt="" id="red">Home</a>
-            <a href="https://feguri.github.io/Starfleet-News/index" alt="" id="blue">News</a>
-            <a href="https://feguri.github.io/Starfleet-News/about-us" alt="" id="yellow">About Us</a>
-            <a href="https://feguri.github.io/Starfleet-News/contact" alt="" id="green">Become a Reporter</a>
+            <a href="https://feguri.github.io/PROVISORY/index" alt="" id="red">Home</a>
+            <a href="https://feguri.github.io/PROVISORY/index" alt="" id="blue">News</a>
+            <a href="https://feguri.github.io/PROVISORY/about-us" alt="" id="yellow">About Us</a>
+            <a href="https://feguri.github.io/PROVISORY/contact" alt="" id="green">Become a Reporter</a>
         </nav>
     </header>
     <main>
